tests/stage2/valid/else_if.c
int main(){
    int a = 5;
    int b = 0;
    if(a > 5)
        b = 5;
    else if(a == 5)
        b = 3;
    else 
        b = 1;
    return a + b;
}
