tests/stage2/invalid/tenary_no_e2.c
int main(){
    int a = 0;
    a = a > 0 ? 1: ;
    return 0;
}
